fixed gap for nav

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,9 @@ nav li a:hover {
         height: 200px;
         width: 175px;
     }
+    nav ul {
+        gap: 0.5rem;
+    }
 }
 
 #work, #contact {
